# finance-core-api

./: .env.example  .gitignore  README.md  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 6628c5da7cb6_create_initial_tables.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  dashboard.py  records.py  users.py
app/core/: config.py  dependencies.py  security.py
app/db/: session.py
app/models/: __init__.py  financial_record.py  user.py
app/schemas/: __init__.py  auth.py  dashboard.py  record.py  user.py
app/services/: auth_service.py  dashboard_service.py  record_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_dashboards.py  test_records.py
